refactor: adequa métodos e classes ao diagrama de classes